--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -21,11 +21,16 @@
 
         <nav>
             <ul>
-                <li><a href="#">AGENDA</a></li>
+                <li><a href="#"id="#Daleloco">AGENDA</a></li>
                 <li><a href="#">NOTICIAS</a></li>
             </ul>
+
+        </nav>
+        <form>
             <input type="text" placeholder="DESCUBRIR EVENTOS">
-            <ul id="AyudaIngresar">
+        </form>
+        <nav id="AyudaIngresar">
+            <ul>
                 <li><a href="#">AYUDA</a></li>
                 <li><a href="#">INGRESAR</a></li>
             </ul>
