Arreglado el navegador
PEqueño descontento con una separación entre botones, no encuentro solución por ningún lado se lo preguntamos al profe

--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -21,7 +21,7 @@
 
         <nav>
             <ul>
-                <li><a href="#"id="#Daleloco">AGENDA</a></li>
+                <li><a href="#">AGENDA</a></li>
                 <li><a href="#">NOTICIAS</a></li>
             </ul>
 
@@ -55,7 +55,7 @@
                     <p>Insertarprecioaqui</p>
                     <input type="button" value="COMPRAR">
                 </article>
-                <article>
+                <article class = "ElDeEnMedio">
                     <figure>
                         <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
                             alt="Una banda tocando música">
