--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -38,115 +38,173 @@
     </header>
     <main>
         <section>
-            <h2>AGENDA</h2>
-            <h3>Música</h3>
             <section>
-                <article>
-                    <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
-                    </figure>
-                    <details>
-                        <summary>
-                            Más detalles
-                        </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
-                    </details>
-                    <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
-                </article>
-                <article class = "ElDeEnMedio">
-                    <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
-                    </figure>
-                    <details>
-                        <summary>
-                            Más detalles
-                        </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
-                    </details>
-                    <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
-                </article>
-                <article>
-                    <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
-                    </figure>
-                    <details>
-                        <summary>
-                            Más detalles
-                        </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
-                    </details>
-                    <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
-                </article>
+                <section>
+                    <h2>AGENDA</h2>
+                    <h3>Música</h3>
+                    <section>
+                        <article>
+                            <figure>
+                                <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                                    alt="Una banda tocando música">
+                            </figure>
+                            <details>
+                                <summary>
+                                    Más detalles
+                                </summary>
+                                <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                            </details>
+                            <p>Insertarprecioaqui</p>
+                            <input type="button" value="COMPRAR">
+                        </article>
+                        <article class="ElDeEnMedio">
+                            <figure>
+                                <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                                    alt="Una banda tocando música">
+                            </figure>
+                            <details>
+                                <summary>
+                                    Más detalles
+                                </summary>
+                                <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                            </details>
+                            <p>Insertarprecioaqui</p>
+                            <input type="button" value="COMPRAR">
+                        </article>
+                        <article>
+                            <figure>
+                                <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                                    alt="Una banda tocando música">
+                            </figure>
+                            <details>
+                                <summary>
+                                    Más detalles
+                                </summary>
+                                <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                            </details>
+                            <p>Insertarprecioaqui</p>
+                            <input type="button" value="COMPRAR">
+                        </article>
+                    </section>
+                    <footer>
+                        VER MÁS
+                    </footer>
+                </section>
+                <section>
+                    <h2>AGENDA</h2>
+                    <h3>Música</h3>
+                    <section>
+                        <article>
+                            <figure>
+                                <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                                    alt="Una banda tocando música">
+                            </figure>
+                            <details>
+                                <summary>
+                                    Más detalles
+                                </summary>
+                                <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                            </details>
+                            <p>Insertarprecioaqui</p>
+                            <input type="button" value="COMPRAR">
+                        </article>
+                        <article class="ElDeEnMedio">
+                            <figure>
+                                <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                                    alt="Una banda tocando música">
+                            </figure>
+                            <details>
+                                <summary>
+                                    Más detalles
+                                </summary>
+                                <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                            </details>
+                            <p>Insertarprecioaqui</p>
+                            <input type="button" value="COMPRAR">
+                        </article>
+                        <article>
+                            <figure>
+                                <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                                    alt="Una banda tocando música">
+                            </figure>
+                            <details>
+                                <summary>
+                                    Más detalles
+                                </summary>
+                                <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                            </details>
+                            <p>Insertarprecioaqui</p>
+                            <input type="button" value="COMPRAR">
+                        </article>
+                    </section>
+                    <footer>
+                        VER MÁS
+                    </footer>
+                </section>
             </section>
+            <aside>
+                <h3>Últimos cupos!!</h3>
+                <article>
+                    <figure>
+                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                            alt="Una banda tocando música">
+                    </figure>
+                    <details>
+                        <summary>
+                            Más detalles
+                        </summary>
+                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                    </details>
+                    <p>Insertarprecioaqui</p>
+                    <input type="button" value="COMPRAR">
+                </article>
 
+                <article>
+                    <figure>
+                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                            alt="Una banda tocando música">
+                    </figure>
+                    <details>
+                        <summary>
+                            Más detalles
+                        </summary>
+                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                    </details>
+                    <p>Insertarprecioaqui</p>
+                    <input type="button" value="COMPRAR">
+                </article>
+                <article>
+                    <figure>
+                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                            alt="Una banda tocando música">
+                    </figure>
+                    <details>
+                        <summary>
+                            Más detalles
+                        </summary>
+                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                    </details>
+                    <p>Insertarprecioaqui</p>
+                    <input type="button" value="COMPRAR">
+                </article>
+                <article>
+                    <figure>
+                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                            alt="Una banda tocando música">
+                    </figure>
+                    <details>
+                        <summary>
+                            Más detalles
+                        </summary>
+                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                    </details>
+                    <p>Insertarprecioaqui</p>
+                    <input type="button" value="COMPRAR">
+                </article>
+
+            </aside>
         </section>
-        <aside>
-            <h3>Últimos cupos!!</h3>
-            <article>
-                <figure>
-                    <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                        alt="Una banda tocando música">
-                </figure>
-                <details>
-                    <summary>
-                        Más detalles
-                    </summary>
-                    <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
-                </details>
-                <p>Insertarprecioaqui</p>
-                <input type="button" value="COMPRAR">
-            </article>
 
-            <article>
-                <figure>
-                    <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                        alt="Una banda tocando música">
-                </figure>
-                <details>
-                    <summary>
-                        Más detalles
-                    </summary>
-                    <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
-                </details>
-                <p>Insertarprecioaqui</p>
-                <input type="button" value="COMPRAR">
-            </article>
-            <article>
-                <figure>
-                    <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                        alt="Una banda tocando música">
-                </figure>
-                <details>
-                    <summary>
-                        Más detalles
-                    </summary>
-                    <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
-                </details>
-                <p>Insertarprecioaqui</p>
-                <input type="button" value="COMPRAR">
-            </article>
-            <article>
-                <figure>
-                    <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                        alt="Una banda tocando música">
-                </figure>
-                <details>
-                    <summary>
-                        Más detalles
-                    </summary>
-                    <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
-                </details>
-                <p>Insertarprecioaqui</p>
-                <input type="button" value="COMPRAR">
-            </article>
-
-        </aside>
     </main>
 </body>
 
