--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -141,6 +141,57 @@
                         VER MÁS
                     </footer>
                 </section>
+                <section>
+                    <h2>AGENDA</h2>
+                    <h3>Música</h3>
+                    <section>
+                        <article>
+                            <figure>
+                                <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                                    alt="Una banda tocando música">
+                            </figure>
+                            <details>
+                                <summary>
+                                    Más detalles
+                                </summary>
+                                <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                            </details>
+                            <p>Insertarprecioaqui</p>
+                            <input type="button" value="COMPRAR">
+                        </article>
+                        <article class="ElDeEnMedio">
+                            <figure>
+                                <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                                    alt="Una banda tocando música">
+                            </figure>
+                            <details>
+                                <summary>
+                                    Más detalles
+                                </summary>
+                                <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                            </details>
+                            <p>Insertarprecioaqui</p>
+                            <input type="button" value="COMPRAR">
+                        </article>
+                        <article>
+                            <figure>
+                                <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                                    alt="Una banda tocando música">
+                            </figure>
+                            <details>
+                                <summary>
+                                    Más detalles
+                                </summary>
+                                <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                            </details>
+                            <p>Insertarprecioaqui</p>
+                            <input type="button" value="COMPRAR">
+                        </article>
+                    </section>
+                    <footer>
+                        VER MÁS
+                    </footer>
+                </section>
             </section>
             <aside>
                 <h3>Últimos cupos!!</h3>
@@ -203,6 +254,9 @@
                 </article>
 
             </aside>
+        </section>
+        <section id="Noticias">
+            <h2>Holi</h2>
         </section>
 
     </main>
