--- a/Proyecto - Diseño de Interfaz Web/admin/index.html
+++ b/Proyecto - Diseño de Interfaz Web/admin/index.html
@@ -12,33 +12,32 @@
 </head>
 
 <body>
-
     <main>
-        <h1>INGRESAR</h1>
-        <p>Todos los campos son obligatorios</p>
+        <section>
+            <h1>INGRESAR</h1>
+            <p>Todos los campos son obligatorios</p>
 
-        <figure>
-            <img src="../img/logo2.png">
-        </figure>
+            <figure>
+                <img src="../img/logo2.png">
+            </figure>
 
-        <form>
-            <ul>
-                <li>
-                    <p>Usuario</p>
-                    <input type="text" placeholder="Nombre de usuario">
-                </li>
-                <li>
-                    <p>Contraseña</p>
-                    <input type="text" placeholder="Contraseña">
-                </li>
-            </ul>
-
-            <label><input type="checkbox"> Recordar datos</label>
-            <input type="button" value="INGRESAR">
-        </form>
-
+            <form>
+                <ul>
+                    <li>
+                        <p>Usuario</p>
+                        <input type="text" placeholder="Nombre de usuario">
+                    </li>
+                    <li>
+                        <p>Contraseña</p>
+                        <input type="text" placeholder="Contraseña">
+                    </li>
+                </ul>
+                
+                <label><input type="checkbox"> Recordar datos</label>
+                <input type="button" value="INGRESAR">
+            </form>
+        </section>
     </main>
-
 </body>
 
 </html>
