--- a/Proyecto - Diseño de Interfaz Web/admin/index.html
+++ b/Proyecto - Diseño de Interfaz Web/admin/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>Title</title>
+    <title>Login - Admin</title>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="">
@@ -13,30 +13,19 @@
 
 <body>
     <main>
-        <section>
-            <h1>INGRESAR</h1>
-            <p>Todos los campos son obligatorios</p>
+        <h1>INGRESAR</h1>
+        <p>Todos los campos son obligatorios</p>
 
-            <figure>
-                <img src="../img/logo2.png">
-            </figure>
+        <figure>
+            <img src="../img/logo2.png">
+        </figure>
 
-            <form>
-                <ul>
-                    <li>
-                        <p>Usuario</p>
-                        <input type="text" placeholder="Nombre de usuario">
-                    </li>
-                    <li>
-                        <p>Contraseña</p>
-                        <input type="text" placeholder="Contraseña">
-                    </li>
-                </ul>
-                
-                <label><input type="checkbox"> Recordar datos</label>
-                <input type="button" value="INGRESAR">
-            </form>
-        </section>
+        <form>
+            <label>Usuario <input type="text" placeholder="Nombre de usuario"></label>
+            <label>Contraseña <input type="text" placeholder="Contraseña"></label>
+            <label id="checkbox"><input type="checkbox"> Recordar datos</label>
+            <input type="button" value="INGRESAR">
+        </form>
     </main>
 </body>
 
