Noticias casi listo

--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -255,6 +255,24 @@
         </section>
         <section id="Noticias">
             <h1>Holi</h1>
+            <figure>
+                <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                    alt="Una banda tocando música">
+            </figure>
+            <article>
+                <h3>Noticia</h3>
+                <p>Insertarprecioaqui</p>
+                <input type="button" value="COMPRAR">
+            </article>
+            <figure>
+                <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                    alt="Una banda tocando música">
+            </figure>
+            <article id=UltimoArticulo>
+                    <h3>Noticia</h3>s
+                <p>Insertarprecioaqui</p>
+                <input type="button" value="COMPRAR">
+            </article>
         </section>
 
     </main>
