Arregle parte de suscribite
Más uppercase, y el etilo del boton quedo

--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -56,7 +56,7 @@
                         <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
                     </details>
                     <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
+                    <input type="button" value="Comprar">
                 </article>
                 <article class="ElDeEnMedio">
                     <!--Esta clase le da al articulo un margen lateral-->
@@ -72,7 +72,7 @@
                         <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
                     </details>
                     <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
+                    <input type="button" value="Comprar">
                 </article>
                 <article>
                     <figure>
@@ -87,7 +87,7 @@
                         <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
                     </details>
                     <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
+                    <input type="button" value="Comprar">
                 </article>
                 <footer>
                     <!--Ocupa toda la sección y limpia la flotación-->
@@ -110,23 +110,7 @@
                         <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
                     </details>
                     <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
-                </article>
-
-                <article>
-                    <figure>
-                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
-                            alt="Una banda tocando música">
-                    </figure>
-                    <h3>Nombre Evento</h3>
-                    <details>
-                        <summary>
-                            Más detalles
-                        </summary>
-                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
-                    </details>
-                    <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
+                    <input type="button" value="Comprar">
                 </article>
                 <article>
                     <figure>
@@ -141,7 +125,7 @@
                         <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
                     </details>
                     <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
+                    <input type="button" value="Comprar">
                 </article>
                 <article>
                     <figure>
@@ -156,9 +140,23 @@
                         <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
                     </details>
                     <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
+                    <input type="button" value="Comprar">
                 </article>
-
+                <article>
+                    <figure>
+                        <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música"
+                            alt="Una banda tocando música">
+                    </figure>
+                    <h3>Nombre Evento</h3>
+                    <details>
+                        <summary>
+                            Más detalles
+                        </summary>
+                        <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
+                    </details>
+                    <p>Insertarprecioaqui</p>
+                    <input type="button" value="Comprar">
+                </article>
             </aside>
             <section>
                 <!--Sección de conferencias-->
@@ -176,7 +174,7 @@
                         <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
                     </details>
                     <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
+                    <input type="button" value="Comprar">
                 </article>
                 <article class="ElDeEnMedio">
                     <figure>
@@ -191,7 +189,7 @@
                         <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
                     </details>
                     <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
+                    <input type="button" value="Comprar">
                 </article>
                 <article>
                     <figure>
@@ -206,7 +204,7 @@
                         <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
                     </details>
                     <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
+                    <input type="button" value="Comprar">
                 </article>
                 <footer>
                     VER MÁS
@@ -228,7 +226,7 @@
                         <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
                     </details>
                     <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
+                    <input type="button" value="Comprar">
                 </article>
                 <article class="ElDeEnMedio">
                     <figure>
@@ -243,7 +241,7 @@
                         <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
                     </details>
                     <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
+                    <input type="button" value="Comprar">
                 </article>
                 <article>
                     <figure>
@@ -258,7 +256,7 @@
                         <p>PPPPPPPPPPPPPPPPPPPPPPP</p>
                     </details>
                     <p>Insertarprecioaqui</p>
-                    <input type="button" value="COMPRAR">
+                    <input type="button" value="Comprar">
                 </article>
                 <footer>
                     VER MÁS
@@ -276,13 +274,13 @@
                 <!--Flotado a la izquierda-->
                 <h3>Noticia</h3>
                 <p>Insertarprecioaqui</p>
-                <input type="button" value="COMPRAR">
+                <input type="button" value="Comprar">
             </article>
             <article id=UltimoArticulo>
                 <!--Flotado a la derecha-->
                 <h3>Soy un título realmente largo</h3>
                 <p>Insertarprecioaqui</p>
-                <input type="button" value="COMPRAR">
+                <input type="button" value="Comprar">
             </article>
             <figure id=UltimaFoto>
                 <!--Flotado a la derecha-->
@@ -315,7 +313,7 @@
                 <label>
                     </label>
                     <input type="input">
-                    <input type="buttom">
+                    <input type="button" value = "Botonaso">
             </form>
         </section>
     </main>
