Header y Nav de las dos páginas restantes
Solucionado el problema que había con el header

--- a/Proyecto - Diseño de Interfaz Web/admin/index.html
+++ b/Proyecto - Diseño de Interfaz Web/admin/index.html
@@ -12,19 +12,19 @@
 </head>
 
 <body>
-    <main>
+    <main id="mainLogin">
         <h1>INGRESAR</h1>
-        <p>Todos los campos son obligatorios</p>
+        <p id="pLogin">Todos los campos son obligatorios</p>
 
-        <figure>
-            <img src="../img/logo2.png">
+        <figure id="figureLogin">
+            <img  id="logoLogin" src="../img/logo2.png">
         </figure>
 
-        <form>
+        <form id="formLogin"> <!-- Preguntar al profe, input adentro de label -->
             <label>Usuario <input type="text" placeholder="Nombre de usuario"></label>
             <label>Contraseña <input type="text" placeholder="Contraseña"></label>
-            <label id="checkbox"><input type="checkbox"> Recordar datos</label>
-            <input type="button" value="INGRESAR">
+            <label id="checkboxLogin"><input type="checkbox"> Recordar datos</label>
+            <input type="button" id="btnIngresarLogin" value="INGRESAR">
         </form>
     </main>
 </body>
