Falta solo footer
exploto y lo deje explotado

--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -311,12 +311,17 @@
             <h1>Suscribite</h1>
             <form>
                 <label>
-                    </label>
-                    <input type="input">
-                    <input type="button" value = "Botonaso">
+                    ¡Ingresá tu e-mail y enterate de todas las novedades!
+                </label>
+                <input type="text" placeholder="cosopere@gmail.com">
+                <input type="button" value="Ingresar">
             </form>
         </section>
+        <footer>
+                <p>@Copyright 2019-Insertar un buen título aquí</p>
+            </footer>
     </main>
+    
 </body>
 
 </html>
