--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -317,11 +317,12 @@
                 <input type="button" value="Ingresar">
             </form>
         </section>
-        <footer>
-                <p>@Copyright 2019-Insertar un buen título aquí</p>
-            </footer>
+        
     </main>
-    
+    <footer>
+        <p>@Copyright 2019-Insertar un buen título aquí</p>
+        <figure><img src="../img/fb.png"><img src="../img/ins.png"><img src="../img/tw.png"></figure>
+    </footer>
 </body>
 
 </html>
