--- a/Proyecto - Diseño de Interfaz Web/admin/listado.html
+++ b/Proyecto - Diseño de Interfaz Web/admin/listado.html
@@ -40,7 +40,7 @@
             <input type="submit" value="AGREGAR EVENTOS">
         </form>
         <form id="filtrador">
-            <input type="text" placeholder="FILTRAR">
+            <input type="text" placeholder="FILTRAR" id="Buscador">
         </form>
 
         <table>
