--- a/Proyecto - Diseño de Interfaz Web/frontend/index.html
+++ b/Proyecto - Diseño de Interfaz Web/frontend/index.html
@@ -268,23 +268,23 @@
             <h1>Noticias</h1>
             <figure>
                 <!--Flotado a la izquierda-->
-                <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música" alt="Una banda tocando música">
+                <img src="../img/Noticia1.jpg" title="Rencuentro" alt="Las cabezas de la canda por fin se unen">
             </figure>
             <article>
                 <!--Flotado a la izquierda-->
-                <h3>Noticia</h3>
-                <p>Insertarprecioaqui</p>
-                <input type="button" value="Comprar">
+                <h3>¡La banda por fin se reune!</h3>
+                <p>La polémica banda, logra resolver sus conflictos después de 10 años de disputa. El vocalista sumido en el alcohol demandó al guitarrista por uso de droga indebido durante un show.</p>
+                <input type="button" value="Leer más">
             </article>
             <article id=UltimoArticulo>
                 <!--Flotado a la derecha-->
-                <h3>Soy un título realmente largo</h3>
-                <p>Insertarprecioaqui</p>
-                <input type="button" value="Comprar">
+                <h3>Disturbios sobre hielo</h3>
+                <p>Los conocidos rivales Prakasata y Ujmapuk desataron toda su frustración sin esperar a terminar el partido. Las autoridades pararon el encuentro, ambos equipos están descalificados.</p>
+                <input type="button" value="Leer más">
             </article>
             <figure id=UltimaFoto>
                 <!--Flotado a la derecha-->
-                <img src="../img/bandadeejemplo.jpg" title="Una banda tocando música" alt="Una banda tocando música">
+                <img src="../img/Noticia2.jpg" title="Disturbios sobre hielo" alt="Dos equipos de hockey peleando">
             </figure>
 
         </section>
